[gd_scene load_steps=56 format=3 uid="uid://c1j44odlgo42f"]

[ext_resource type="Texture2D" uid="uid://b7maq8ef755mi" path="res://assets/backgrounds/grass_battle_background.png" id="1_3b60w"]
[ext_resource type="Script" path="res://src/battle/scripts/Battle_Zones/Forest_Battle_Scene.gd" id="1_i27mq"]
[ext_resource type="Resource" uid="uid://4o61bulmtd63" path="res://src/battle/resources/Enemies/enemy_1.tres" id="2_2lrwe"]
[ext_resource type="Resource" uid="uid://c7u4es6btphxh" path="res://src/battle/resources/Characters/player_1.tres" id="3_unjet"]
[ext_resource type="Resource" uid="uid://woane3tbb58u" path="res://src/battle/resources/Characters/companion.tres" id="4_gload"]
[ext_resource type="Resource" uid="uid://b75qdpe4in5sb" path="res://src/battle/resources/Enemies/enemy_2.tres" id="5_b7eaf"]
[ext_resource type="PackedScene" uid="uid://ckiain8unk2wd" path="res://src/battle/scenes/Characters/companion.tscn" id="7_7cmbj"]
[ext_resource type="PackedScene" uid="uid://dqgpi3owbaxar" path="res://src/battle/ui/turn_based_menus/companion_action_selection.tscn" id="8_po23n"]
[ext_resource type="PackedScene" uid="uid://dgch1la8udhgi" path="res://src/battle/ui/InfoTexbox.tscn" id="8_v0t2j"]
[ext_resource type="PackedScene" uid="uid://w55v1oqxcxtd" path="res://src/battle/ui/turn_counter.tscn" id="9_6qasy"]
[ext_resource type="PackedScene" uid="uid://cq80dp2vl3k53" path="res://src/battle/scenes/Characters/player_character.tscn" id="9_i2eug"]
[ext_resource type="PackedScene" uid="uid://telmfvalpr36" path="res://src/battle/ui/turn_based_menus/companion_magic_selection.tscn" id="9_ys1cy"]
[ext_resource type="PackedScene" uid="uid://c7t2aex7vmkrj" path="res://src/battle/ui/turn_based_menus/action_selection.tscn" id="12_h1kms"]
[ext_resource type="PackedScene" uid="uid://drnd0jopnheao" path="res://src/battle/ui/turn_based_menus/magic_selection.tscn" id="13_7kwe0"]
[ext_resource type="PackedScene" uid="uid://b4o35bpv3uwrr" path="res://src/battle/scenes/Enemies/enemy_group.tscn" id="14_d4e0q"]
[ext_resource type="PackedScene" uid="uid://n3iybn13ymi1" path="res://src/ui/menu_cursor.tscn" id="15_75lh7"]
[ext_resource type="Script" path="res://src/battle/ui/cursors/enemy_selection_cursor.gd" id="16_kcrop"]
[ext_resource type="Script" path="res://src/battle/ui/cursors/magic_selection_cursor.gd" id="17_53w1d"]
[ext_resource type="Script" path="res://src/battle/ui/cursors/action_selection_cursor.gd" id="18_0e48g"]
[ext_resource type="Script" path="res://src/battle/ui/cursors/companion_action_menu_cursor.gd" id="19_7el6r"]
[ext_resource type="Script" path="res://src/battle/ui/cursors/companion_magic_menu_cursor.gd" id="20_npucr"]
[ext_resource type="PackedScene" uid="uid://cd08g0b2vthor" path="res://src/battle/ui/health_and_magic_bars/character_info_textbox.tscn" id="21_i4wqi"]

[sub_resource type="Animation" id="Animation_pmchn"]
resource_name = "Attacked"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ofvl3"]
resource_name = "Dead"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lv71f"]
resource_name = "Earth"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mmns2"]
resource_name = "Fire"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_goik6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8b71i"]
resource_name = "Thunder"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mruws"]
resource_name = "Water"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ck1d"]
_data = {
"Attacked": SubResource("Animation_pmchn"),
"Dead": SubResource("Animation_ofvl3"),
"Earth": SubResource("Animation_lv71f"),
"Fire": SubResource("Animation_mmns2"),
"RESET": SubResource("Animation_goik6"),
"Thunder": SubResource("Animation_8b71i"),
"Water": SubResource("Animation_mruws")
}

[sub_resource type="Animation" id="Animation_wvgbg"]
resource_name = "Attacked"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bocjq"]
resource_name = "Dead"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2kn3m"]
resource_name = "Earth"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ghe8x"]
resource_name = "Fire"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6c5tl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fgmab"]
resource_name = "Thunder"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tli6v"]
resource_name = "Water"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pair_of_Enemies/Enemy_2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7iglr"]
_data = {
"Attacked": SubResource("Animation_wvgbg"),
"Dead": SubResource("Animation_bocjq"),
"Earth": SubResource("Animation_2kn3m"),
"Fire": SubResource("Animation_ghe8x"),
"RESET": SubResource("Animation_6c5tl"),
"Thunder": SubResource("Animation_fgmab"),
"Water": SubResource("Animation_tli6v")
}

[sub_resource type="Animation" id="Animation_chh0n"]
resource_name = "Dead"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_01jcc"]
resource_name = "Earth"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_owh5b"]
resource_name = "Fire"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5yonk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cid7y"]
resource_name = "Thunder"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dxmi4"]
resource_name = "Water"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_di6b4"]
resource_name = "player_damaged"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gwvdt"]
resource_name = "player_heal"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rwyqv"]
_data = {
"Dead": SubResource("Animation_chh0n"),
"Earth": SubResource("Animation_01jcc"),
"Fire": SubResource("Animation_owh5b"),
"RESET": SubResource("Animation_5yonk"),
"Thunder": SubResource("Animation_cid7y"),
"Water": SubResource("Animation_dxmi4"),
"damage": SubResource("Animation_di6b4"),
"heal": SubResource("Animation_gwvdt")
}

[sub_resource type="Animation" id="Animation_xqc77"]
resource_name = "Dead"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Companion:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6ymxa"]
resource_name = "Earth"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Companion:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1), Color(0.545098, 0.270588, 0.0745098, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tok61"]
resource_name = "Fire"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Companion:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ouhr6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Companion:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u8wvk"]
resource_name = "Thunder"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Companion:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v30fk"]
resource_name = "Water"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Companion:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_k3rkn"]
resource_name = "companion_damage"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Companion:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kx2mk"]
_data = {
"Dead": SubResource("Animation_xqc77"),
"Earth": SubResource("Animation_6ymxa"),
"Fire": SubResource("Animation_tok61"),
"RESET": SubResource("Animation_ouhr6"),
"Thunder": SubResource("Animation_u8wvk"),
"Water": SubResource("Animation_v30fk"),
"damage": SubResource("Animation_k3rkn")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i27mq")
enemy = ExtResource("2_2lrwe")
character = ExtResource("3_unjet")
companion = ExtResource("4_gload")
enemy_2 = ExtResource("5_b7eaf")

[node name="Battle_Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 646.0
texture = ExtResource("1_3b60w")

[node name="Companion" parent="." instance=ExtResource("7_7cmbj")]

[node name="ActionSelection" parent="Companion" instance=ExtResource("8_po23n")]

[node name="MagicSelection" parent="Companion" instance=ExtResource("9_ys1cy")]

[node name="Player_Character" parent="." instance=ExtResource("9_i2eug")]

[node name="ActionSelection" parent="Player_Character" instance=ExtResource("12_h1kms")]

[node name="MagicSelection" parent="Player_Character" instance=ExtResource("13_7kwe0")]

[node name="EnemyDamage" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ck1d")
}

[node name="Enemy_2_Damage" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7iglr")
}

[node name="TextboxTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="PlayerDamage" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rwyqv")
}

[node name="InfoTextbox" parent="." instance=ExtResource("8_v0t2j")]

[node name="TurnCounter" parent="." instance=ExtResource("9_6qasy")]

[node name="CompanionDamage" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kx2mk")
}

[node name="Pair_of_Enemies" parent="." instance=ExtResource("14_d4e0q")]
layout_mode = 0
offset_left = 306.0
offset_top = 181.0
offset_right = 594.0
offset_bottom = 410.0

[node name="Enemy_1" parent="Pair_of_Enemies" index="0"]
custom_minimum_size = Vector2(100, 100)

[node name="Enemy_2" parent="Pair_of_Enemies" index="1"]
custom_minimum_size = Vector2(100, 100)

[node name="menu_cursor" parent="." instance=ExtResource("15_75lh7")]
layout_mode = 0
offset_left = 81.0
offset_top = 192.0
offset_right = 321.0
offset_bottom = 432.0
scale = Vector2(0.789061, 0.814179)
script = ExtResource("16_kcrop")
menu_parent_path = NodePath("../Pair_of_Enemies")
cursor_offset = Vector2(50, 0)

[node name="Player_Character_Magic_Cursor" parent="." instance=ExtResource("15_75lh7")]
layout_mode = 0
offset_left = 126.0
offset_top = 226.0
offset_right = 366.0
offset_bottom = 466.0
script = ExtResource("17_53w1d")
menu_parent_path = NodePath("../Player_Character/MagicSelection/Magic")
cursor_offset = Vector2(110, 100)

[node name="Player_Character_Action_Cursor" parent="." instance=ExtResource("15_75lh7")]
layout_mode = 0
offset_left = 59.0
offset_top = 173.0
offset_right = 299.0
offset_bottom = 413.0
script = ExtResource("18_0e48g")
menu_parent_path = NodePath("../Player_Character/ActionSelection/Actions")
cursor_offset = Vector2(110, 100)

[node name="Companion_Action_Cursor" parent="." instance=ExtResource("15_75lh7")]
layout_mode = 0
offset_left = 47.0
offset_top = 123.0
offset_right = 287.0
offset_bottom = 363.0
script = ExtResource("19_7el6r")
menu_parent_path = NodePath("../Companion/ActionSelection/Actions")
cursor_offset = Vector2(110, 100)

[node name="Companion_Magic_Cursor" parent="." instance=ExtResource("15_75lh7")]
layout_mode = 0
offset_left = 16.0
offset_top = 90.0
offset_right = 256.0
offset_bottom = 330.0
script = ExtResource("20_npucr")
menu_parent_path = NodePath("../Companion/MagicSelection/Magic")
cursor_offset = Vector2(110, 100)

[node name="character_info_textbox" parent="." instance=ExtResource("21_i4wqi")]
offset = Vector2(600, 450)
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 600, 450)

[connection signal="attack_button_pressed" from="." to="menu_cursor" method="_on_battle_attack_button_pressed"]
[connection signal="companion_display_action_cursor" from="." to="Companion_Action_Cursor" method="_on_battle_companion_display_action_cursor"]
[connection signal="companion_display_magic_cursor" from="." to="Companion_Magic_Cursor" method="_on_battle_companion_display_magic_cursor"]
[connection signal="display_attack_cursor" from="." to="Player_Character_Action_Cursor" method="_on_battle_display_attack_cursor"]
[connection signal="hide_companion_display_magic_cursor" from="." to="Companion_Magic_Cursor" method="_on_battle_hide_companion_display_magic_cursor"]
[connection signal="hide_player_display_magic_cursor" from="." to="Player_Character_Magic_Cursor" method="_on_battle_hide_player_display_magic_cursor"]
[connection signal="magic_selected" from="." to="menu_cursor" method="_on_battle_magic_selected"]
[connection signal="player_display_magic_cursor" from="." to="Player_Character_Magic_Cursor" method="_on_battle_player_display_magic_cursor"]
[connection signal="scan_button_pressed" from="." to="menu_cursor" method="_on_battle_scan_button_pressed"]
[connection signal="pressed" from="Companion/ActionSelection/Actions/Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="Companion/ActionSelection/Actions/Scan" to="." method="_on_scan_pressed"]
[connection signal="pressed" from="Companion/ActionSelection/Actions/Skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="Companion/ActionSelection/Actions/Flee" to="." method="_on_flee_pressed"]
[connection signal="pressed" from="Companion/MagicSelection/Magic/Fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="Companion/MagicSelection/Magic/Water" to="." method="_on_water_pressed"]
[connection signal="pressed" from="Companion/MagicSelection/Magic/Lightning" to="." method="_on_lightning_pressed"]
[connection signal="pressed" from="Companion/MagicSelection/Magic/Earth" to="." method="_on_earth_pressed"]
[connection signal="pressed" from="Companion/MagicSelection/Magic/Healing" to="." method="_on_healing_pressed"]
[connection signal="pressed" from="Player_Character/ActionSelection/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Player_Character/ActionSelection/Actions/Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="Player_Character/ActionSelection/Actions/Scan" to="." method="_on_scan_pressed"]
[connection signal="pressed" from="Player_Character/ActionSelection/Actions/Skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="Player_Character/ActionSelection/Actions/Flee" to="." method="_on_flee_pressed"]
[connection signal="pressed" from="Player_Character/MagicSelection/Magic/Fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="Player_Character/MagicSelection/Magic/Water" to="." method="_on_water_pressed"]
[connection signal="pressed" from="Player_Character/MagicSelection/Magic/Lightning" to="." method="_on_lightning_pressed"]
[connection signal="pressed" from="Player_Character/MagicSelection/Magic/Earth" to="." method="_on_earth_pressed"]
[connection signal="timeout" from="TextboxTimer" to="." method="_on_textbox_timer_timeout"]
[connection signal="cursor_selected" from="Pair_of_Enemies/Enemy_1" to="." method="_on_enemy_1_cursor_selected"]
[connection signal="cursor_selected" from="Pair_of_Enemies/Enemy_1" to="menu_cursor" method="_on_enemy_1_cursor_selected"]
[connection signal="cursor_selected" from="Pair_of_Enemies/Enemy_2" to="." method="_on_enemy_2_cursor_selected"]
[connection signal="cursor_selected" from="Pair_of_Enemies/Enemy_2" to="menu_cursor" method="_on_enemy_2_cursor_selected"]
[connection signal="menu_canceled" from="menu_cursor" to="." method="_on_menu_cursor_menu_canceled"]

[editable path="Companion"]
[editable path="Companion/ActionSelection"]
[editable path="Companion/MagicSelection"]
[editable path="Player_Character"]
[editable path="Player_Character/ActionSelection"]
[editable path="Player_Character/MagicSelection"]
[editable path="Pair_of_Enemies"]
[editable path="character_info_textbox"]
